--- a/main.html
+++ b/main.html
@@ -14,12 +14,12 @@
 
 
 <!-- Button trigger modal -->
-<button type="button"id="open-modal" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<button type="button"id="open-modal" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newton-modal">
     Launch new modal
   </button>
   
   <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="newton-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered"id="accio-modal">
       <div class="modal-content">
         <div class="modal-header">
